hibernate message